Muestro las rutas de los usuarios en mapbox

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/spinkit@1.2.5/css/spinkit.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/please-wait@0.0.5/build/please-wait.min.css">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
+
   <style>
     body > .inner {
       display: none;
